Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/Study_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Study Group Member</label>
    <pluralLabel>Study Group Members</pluralLabel>
    <nameField>
        <label>Study Group Member</label>
        <type>AutoNumber</type>
        <displayFormat>SGM-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>