Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/fields/Current_Streak__c.field-meta.xml
<CustomField>
    <fullName>Current_Streak__c</fullName>
    <label>Current Streak</label>
    <type>Number</type>
    <formula>Trailblazer_Profile__r.Current_Streak__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>