Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/fields/Current_Streak_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Current_Streak_Snapshot__c</fullName>
    <label>Current Streak Snapshot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>