Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/fields/Joined_Date__c.field-meta.xml
<CustomField>
    <fullName>Joined_Date__c</fullName>
    <label>Joined Date</label>
    <type>Date</type>
    <inlineHelpText>Date this member joined the study group.</inlineHelpText>
</CustomField>