Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/fields/Member_Name_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Member_Name_Snapshot__c</fullName>
    <label>Member Name Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>