Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leader</fullName>
                <default>true</default>
                <label>Leader</label>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <inlineHelpText>Role of this person within the study group.</inlineHelpText>
</CustomField>