Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/fields/Study_Group__c.field-meta.xml
<CustomField>
    <fullName>Study_Group__c</fullName>
    <label>Study Group</label>
    <type>MasterDetail</type>
    <referenceTo>Study_Group__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <inlineHelpText>The study group this membership belongs to.</inlineHelpText>
</CustomField>