Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/fields/Total_Badges__c.field-meta.xml
<CustomField>
    <fullName>Total_Badges__c</fullName>
    <label>Total Badges</label>
    <type>Number</type>
    <formula>Trailblazer_Profile__r.Total_Badges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>