Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/fields/Total_Badges_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Total_Badges_Snapshot__c</fullName>
    <label>Total Badges Snapshot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>