Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/fields/Trailblazer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Profile__c</fullName>
    <label>Trailblazer Profile</label>
    <type>Lookup</type>
    <referenceTo>Trailblazer_Profile__c</referenceTo>
    <relationshipLabel>Study Group Memberships</relationshipLabel>
    <relationshipName>Study_Group_Memberships</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Trailblazer profile for this study group member.</inlineHelpText>
</CustomField>