Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group_Member__c/fields/XP_Total__c.field-meta.xml
<CustomField>
    <fullName>XP_Total__c</fullName>
    <label>XP Total</label>
    <type>Number</type>
    <formula>Trailblazer_Profile__r.XP_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>